--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>
-        HELPFIT EXTREME GYM
+        Jinjang Literacy Project
     </title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
         <div class="row">
 
           <div class"col-md-4">
-            <a href="home.html"><img src="Logo.jpg" style="position: absolute">
+            <a href="home.html"><img src="Logo.png" style="position: absolute">
             </a></img>
           </div>
 
