done sticky navigation bar

--- a/home.html
+++ b/home.html
@@ -21,50 +21,31 @@
     <!--Include bootstrap library as needed-->
     <script src="js/bootstrap.min.js"></script>
 
-
-
-
-      <div class="container-fluid containerplus">
-        <div class="row">
-
-          <div class"col-md-4">
-            <a href="home.html"><img src="Logo.png" style="position: absolute">
-            </a></img>
-          </div>
-
-            </div>
-          </div>
-
-          <ul class ="nav navigation nav-tabs navbar-right">
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                SIGN UP</a>
-              <ul class="dropdown-menu">
-                <li><a href="signUpTrainer.html">AS TRAINER</a></li>
-                <li><a href="signUpMember.html">AS MEMBER</a></li>
-              </ul>
-            </li>
-          </ul>
-
-          <ul class ="nav navigation nav-tabs navbar-right" style="margin-right: -15px;">
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">LOGIN</a>
-              <ul class="dropdown-menu">
-                <li><a href="trainerLogin.html">AS TRAINER</a></li>
-                <li><a href="memberLogin.html">AS MEMBER</a></li>
-              </ul>
-            </li>
-          </ul>
-
-  <div class="container">
-    <div class="image">
-      <img src="Home.jpg" height= "551px" width="auto"></img>
+    <div class="container-fluid containerplus">
+      <div class="row">
+        <div class"col-md-4">
+          <a href="home.html"><img src="Logo.png" class="logo">
+          </a></img>
+        </div>
+      </div>
     </div>
 
-  </div>
+      <nav class="navbar navbar-default" data-spy="affix" data-offset-top="250">
+      <ul class ="nav navbar-nav">
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">GIVE</a></li>
+        <li><a href="#">JOIN US</a></li>
+        <li><a href="#">LOGIN</a></li>
+      </ul>
+    </nav>
+
+    <div class="container-fluid image">
+      <img src="Home.jpg" class = "homePage"></img>
+    </div>
+
+
 
   <div class="container-fluid footer">
-
     <div class="row">
       <div class="col-xs-1 col-md-1 col-xs-offset-5 icon"
       style="margin-top:33px">
