changed the logo and added footer to the home page

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>
         Jinjang Literacy Project
     </title>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -18,6 +18,7 @@
   <body>
     <!--Include JQuery: necessary for Bootstrap plugins-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--Include bootstrap library as needed-->
     <script src="js/bootstrap.min.js"></script>
 
@@ -27,12 +28,41 @@
           <a href="home.html"><img src="Logo.png" class="logo">
           </a></img>
         </div>
+
+        <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"
+        style="margin-top:33px;">
+          <div><a href=https://www.facebook.com/>
+          <img src = "facebook.png" height="40px" width="40px"></a></div>
+        </div>
+
+        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+          <div><a href=https://www.twitter.com/>
+          <img src = "twitter.png" height="35px" width="35px"></a></div>
+        </div>
+
+        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+          <div><a href=https://www.google.com/>
+          <img src = "google.png" height="35px" width="35px"></a></div>
+        </div>
+
+        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:33px">
+          <div><a href=https://www.instagram.com/>
+          <img src = "instagram.png" height="39px" width="39px"></a></div>
+        </div>
+
+        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+          <div><a href=https://www.youtube.com/>
+          <img src = "youtube.png" height="35px" width="35px"></a></div>
+        </div>
+
       </div>
     </div>
 
-      <nav class="navbar navbar-default" data-spy="affix" data-offset-top="250">
+    <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
       <ul class ="nav navbar-nav">
+        <li class = "active"><a href="#">HOME</a></li>
         <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">EVENTS</a></li>
         <li><a href="#">GIVE</a></li>
         <li><a href="#">JOIN US</a></li>
         <li><a href="#">LOGIN</a></li>
@@ -47,6 +77,17 @@
 
   <div class="container-fluid footer">
     <div class="row">
+      <div class"col-md-4 col-md-offset-1">
+        <img src="FooterLogo.png" class="footerLogo"></img>
+      </div>
+    </div>
+
+      <div class="row">
+      <div class"col-md-4 col-md-offset-1 footertext">
+        @2018 Jinjang Literacy Project
+      </div>
+    </div>
+
       <div class="col-xs-1 col-md-1 col-xs-offset-5 icon"
       style="margin-top:33px">
         <div class="icon"><a href=https://www.facebook.com/>
@@ -63,21 +104,16 @@
         <img src = "google.png" height="50px" width="50px"></a></div>
       </div>
 
+      <div class="col-xs-1 col-md-1  icon" style="margin-top:33px">
+        <div class="icon"><a href=https://www.instagram.com/>
+        <img src = "instagram.png" height="54px" width="54px"></a></div>
+      </div>
+
       <div class="col-xs-1 col-md-1  icon" style="margin-top:35px">
         <div class="icon"><a href=https://www.youtube.com/>
         <img src = "youtube.png" height="50px" width="50px"></a></div>
       </div>
 
-      <div class="col-xs-1 col-md-1  icon" style="margin-top:33px">
-        <div class="icon"><a href=https://www.instagram.com/>
-        <img src = "instagram.png" height="54px" width="54px"></a></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12 col-md-4 footertext">
-        @2017 HELPFIT EXTREME GYM
-      </div>
     </div>
 
   </div>
