--- a/home.html
+++ b/home.html
@@ -29,8 +29,7 @@
           </a></img>
         </div>
 
-        <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"
-        style="margin-top:33px;">
+        <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"style="margin-top:33px;">
           <div><a href=https://www.facebook.com/>
           <img src = "facebook.png" height="40px" width="40px"></a></div>
         </div>
@@ -63,7 +62,7 @@
         <li class = "active"><a href="#">HOME</a></li>
         <li><a href="#">ABOUT US</a></li>
         <li><a href="#">EVENTS</a></li>
-        <li><a href="#">GIVE</a></li>
+        <li><a href="#">DONATE</a></li>
         <li><a href="#">JOIN US</a></li>
         <li><a href="#">LOGIN</a></li>
       </ul>
@@ -76,43 +75,45 @@
 
 
   <div class="container-fluid footer">
-    <div class="row">
-      <div class"col-md-4 col-md-offset-1">
-        <img src="FooterLogo.png" class="footerLogo"></img>
+    <div class ="row">
+      <div class ="col-md-3 col-md-offset-1">
+        <ul class ="ul">
+          <li><img src="FooterLogo.png" class="footerLogo"></img></li>
+          <li class = "footerText">&copy 2018 Jinjang Literacy Project</li>
+        </ul>
       </div>
+
+      <div class ="col-md-3">
+      <ul class = "ul">
+        <li class = "footerText">Connect With Us</li>
+        <li>
+          <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px;">
+          <div><a href=https://www.facebook.com/>
+            <img src = "facebook.png" height="35px" width="35px"></a></div>
+          </div>
+
+          <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+            <div><a href=https://www.twitter.com/>
+            <img src = "twitter.png" height="30px" width="30px"></a></div>
+          </div>
+
+          <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+            <div><a href=https://www.google.com/>
+            <img src = "google.png" height="30px" width="30px"></a></div>
+          </div>
+
+          <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px">
+            <div><a href=https://www.instagram.com/>
+            <img src = "instagram.png" height="34px" width="34px"></a></div>
+          </div>
+
+          <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+            <div><a href=https://www.youtube.com/>
+            <img src = "youtube.png" height="30px" width="30px"></a></div>
+          </div>
+        </li>
     </div>
-
-      <div class="row">
-      <div class"col-md-4 col-md-offset-1 footertext">
-        @2018 Jinjang Literacy Project
-      </div>
     </div>
-
-      <div class="col-xs-1 col-md-1 col-xs-offset-5 icon"
-      style="margin-top:33px">
-        <div class="icon"><a href=https://www.facebook.com/>
-        <img src = "facebook.png" height="55px" width="55px"></a></div>
-      </div>
-
-      <div class="col-xs-1 col-md-1  icon" style="margin-top:35px">
-        <div class="icon"><a href=https://www.twitter.com/>
-        <img src = "twitter.png" height="50px" width="50px"></a></div>
-      </div>
-
-      <div class="col-xs-1 col-md-1  icon" style="margin-top:35px">
-        <div class="icon"><a href=https://www.google.com/>
-        <img src = "google.png" height="50px" width="50px"></a></div>
-      </div>
-
-      <div class="col-xs-1 col-md-1  icon" style="margin-top:33px">
-        <div class="icon"><a href=https://www.instagram.com/>
-        <img src = "instagram.png" height="54px" width="54px"></a></div>
-      </div>
-
-      <div class="col-xs-1 col-md-1  icon" style="margin-top:35px">
-        <div class="icon"><a href=https://www.youtube.com/>
-        <img src = "youtube.png" height="50px" width="50px"></a></div>
-      </div>
 
     </div>
 
