--- a/home.html
+++ b/home.html
@@ -72,11 +72,9 @@
       <img src="Home.jpg" class = "homePage"></img>
     </div>
 
-
-
   <div class="container-fluid footer">
     <div class ="row">
-      <div class ="col-md-3 col-md-offset-1">
+      <div class ="col-md-3">
         <ul class ="ul">
           <li><img src="FooterLogo.png" class="footerLogo"></img></li>
           <li class = "footerText">&copy 2018 Jinjang Literacy Project</li>
@@ -84,35 +82,52 @@
       </div>
 
       <div class ="col-md-3">
-      <ul class = "ul">
-        <li class = "footerText">Connect With Us</li>
-        <li>
-          <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px;">
-          <div><a href=https://www.facebook.com/>
-            <img src = "facebook.png" height="35px" width="35px"></a></div>
-          </div>
+        <ul class = "ul">
+          <br><li class = "footerText">Contact Us</li><br><br>
+          <li><span class="fa fa-phone"></span> +852 12345678</li>
+          <li><span class="fa fa-fax"></span> +852 87654321</li>
+          <li><span class="fa fa-envelope"></span><a href="#"> help@edu.my</a></li>
 
-          <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
-            <div><a href=https://www.twitter.com/>
-            <img src = "twitter.png" height="30px" width="30px"></a></div>
-          </div>
+          <br><li class = "footerText">Connect With Us</li>
+          <li>
+            <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px;">
+            <div><a href=https://www.facebook.com/>
+              <img src = "facebook.png" height="35px" width="35px"></a></div>
+            </div>
 
-          <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
-            <div><a href=https://www.google.com/>
-            <img src = "google.png" height="30px" width="30px"></a></div>
-          </div>
+            <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+              <div><a href=https://www.twitter.com/>
+              <img src = "twitter.png" height="30px" width="30px"></a></div>
+            </div>
 
-          <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px">
-            <div><a href=https://www.instagram.com/>
-            <img src = "instagram.png" height="34px" width="34px"></a></div>
-          </div>
+            <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+              <div><a href=https://www.google.com/>
+              <img src = "google.png" height="30px" width="30px"></a></div>
+            </div>
 
-          <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
-            <div><a href=https://www.youtube.com/>
-            <img src = "youtube.png" height="30px" width="30px"></a></div>
-          </div>
-        </li>
-    </div>
+            <div class ="col-xs-1 col-md-1 icon" style="margin-top:33px">
+              <div><a href=https://www.instagram.com/>
+              <img src = "instagram.png" height="34px" width="34px"></a></div>
+            </div>
+
+            <div class ="col-xs-1 col-md-1 icon" style="margin-top:35px">
+              <div><a href=https://www.youtube.com/>
+              <img src = "youtube.png" height="30px" width="30px"></a></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class ="col-md-3">
+        <ul class = "ul">
+          <li class="footerText">Sponsored By</li>
+          <li><img src = "HELPLogo.png" class = "HELPLogo"></img></li>
+        </ul>
+      </div>
+
+      <div class ="col-md-3">
+        <img src = "AGNLogo.png" class = "AGNLogo"></img>
+      </div>
     </div>
 
     </div>
