--- a/aboutUs.html
+++ b/aboutUs.html
@@ -59,8 +59,8 @@
 
     <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
       <ul class ="nav navbar-nav">
-        <li class = "active"><a href="home.html">HOME</a></li>
-        <li><a href="aboutUs.html">ABOUT US</a></li>
+        <li><a href="home.html">HOME</a></li>
+        <li class = "active"><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATE</a></li>
         <li><a href="joinUs.html">JOIN US</a></li>
