--- a/login.html
+++ b/login.html
@@ -59,17 +59,26 @@
 
     <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
       <ul class ="nav navbar-nav">
-        <li class = "active"><a href="home.html">HOME</a></li>
+        <li><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATE</a></li>
         <li><a href="joinUs.html">JOIN US</a></li>
-        <li><a href="login.html">LOGIN</a></li>
+        <li class = "active"><a href="login.html">LOGIN</a></li>
       </ul>
     </nav>
 
-    <div class="container-fluid image">
-      <img src="Home.jpg" class = "homePage"></img>
+    <div class="container-fluid">
+      <div class = "row">
+          <div class="col-md-4 col-md-offset-4 login">
+            <input type="text" name="username" class="form form-control input-lg"
+            placeholder="USERNAME">
+            <input type="password" name="password" class="form form-control input-lg"
+            placeholder="PASSWORD">
+
+            <button type="submit" class="loginBtn">LOGIN</button>
+        </div>
+      </div>
     </div>
 
   <div class="container-fluid footer">
