adjusted the navigation bar

--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div class"col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo">
-          </a></img>
+          </a>
         </div>
 
         <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"style="margin-top:33px;">
@@ -68,7 +68,7 @@
       </ul>
     </nav>
 
-    <div class="container-fluid image">
+    <div class="container-fluid">
       <img src="Home.jpg" class = "homePage"></img>
     </div>
 
