--- a/joinUs.html
+++ b/joinUs.html
@@ -81,7 +81,7 @@
         </ul>
       </div>
 
-      <div class ="col-md-3">
+      <div class ="col-md-3 contact">
         <ul class = "ul">
           <br><li class = "footerText">Contact Us</li><br><br>
           <li><span class="fa fa-phone"></span> +852 12345678</li>
@@ -120,7 +120,7 @@
 
       <div class ="col-md-3">
         <ul class = "ul">
-          <li class="footerText">Sponsored By</li>
+          <li class="footerText" style="margin-top:35px;">Sponsored By</li>
           <li><img src = "HELPLogo.png" class = "HELPLogo"></img></li>
         </ul>
       </div>
