--- a/login.html
+++ b/login.html
@@ -71,8 +71,9 @@
     <div class="container-fluid">
       <div class = "row">
           <div class="col-md-4 col-md-offset-4 login">
+            <h1 class = "loginText">LOGIN</h1>
             <input type="text" name="username" class="form form-control input-lg"
-            placeholder="USERNAME">
+            placeholder="USERNAME" style = "margin-top:60px;">
             <input type="password" name="password" class="form form-control input-lg"
             placeholder="PASSWORD">
 
@@ -90,7 +91,7 @@
         </ul>
       </div>
 
-      <div class ="col-md-3">
+      <div class ="col-md-3 contact">
         <ul class = "ul">
           <br><li class = "footerText">Contact Us</li><br><br>
           <li><span class="fa fa-phone"></span> +852 12345678</li>
@@ -129,7 +130,7 @@
 
       <div class ="col-md-3">
         <ul class = "ul">
-          <li class="footerText">Sponsored By</li>
+          <li class="footerText" style="margin-top:35px;">Sponsored By</li>
           <li><img src = "HELPLogo.png" class = "HELPLogo"></img></li>
         </ul>
       </div>
