Added iron router

--- a/FYP/main.html
+++ b/FYP/main.html
@@ -71,6 +71,12 @@
     <img src="Home.jpg" class = "homePage">
   </div>
 
+<!-- Templates start here -->
+
+<!-- {{> demo}} -->
+
+<!-- Templates end here -->
+
 <div class="container-fluid footer">
   <div class ="row">
     <div class ="col-md-3">
@@ -163,3 +169,8 @@
     <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
   </ul>
 </template> -->
+
+<template name="demo">
+  <h1>Hello World!</h1>
+
+</template>
