--- a/FYP/main.html
+++ b/FYP/main.html
@@ -22,9 +22,8 @@
 
   <div class="container-fluid containerplus">
     <div class="row">
-      <div class="col-md-4">
-        <a href="home.html">
-          <img src="Logo.png" class="logo">
+      <div class = "col-md-4">
+        <a href="home.html"><img src="Logo.png" class="logo">
         </a>
       </div>
 
@@ -58,35 +57,29 @@
 
   <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
     <ul class ="nav navbar-nav">
-      <li class = "active"><a href="#">HOME</a></li>
-      <li><a href="#">ABOUT US</a></li>
-      <li><a href="#">EVENTS</a></li>
-      <li><a href="#">DONATE</a></li>
-      <li><a href="#">JOIN US</a></li>
-      <li><a href="#">LOGIN</a></li>
+      <li class = "active"><a href="home.html">HOME</a></li>
+      <li><a href="aboutUs.html">ABOUT US</a></li>
+      <li><a href="events.html">EVENTS</a></li>
+      <li><a href="donate.html">DONATE</a></li>
+      <li><a href="joinUs.html">JOIN US</a></li>
+      <li><a href="login.html">LOGIN</a></li>
     </ul>
   </nav>
 
-  <div class="container-fluid image">
+  <div class="container-fluid">
     <img src="Home.jpg" class = "homePage">
   </div>
-
-<!-- Templates start here -->
-
-<!-- {{> demo}} -->
-
-<!-- Templates end here -->
 
 <div class="container-fluid footer">
   <div class ="row">
     <div class ="col-md-3">
       <ul class ="ul">
         <li><img src="FooterLogo.png" class="footerLogo"></li>
-        <li> class = "footerText">&copy; 2018 Jinjang Literacy Project</li>
+        <li class = "footerText">&copy; 2018 Jinjang Literacy Project</li>
       </ul>
     </div>
 
-    <div class ="col-md-3">
+    <div class ="col-md-3 contact">
       <ul class = "ul">
         <br><li class = "footerText">Contact Us</li><br><br>
         <li><span class="fa fa-phone"></span> +852 12345678</li>
@@ -125,7 +118,7 @@
 
     <div class ="col-md-3">
       <ul class = "ul">
-        <li class="footerText">Sponsored By</li>
+        <li class="footerText" style="margin-top:35px;">Sponsored By</li>
         <li><img src = "HELPLogo.png" class = "HELPLogo"></li>
       </ul>
     </div>
@@ -142,35 +135,3 @@
 </div> -->
 
 </body>
-
-
-<!-- <head>
-  <title>FYP</title>
-</head>
-
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
-</body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template> -->
-
-<template name="demo">
-  <h1>Hello World!</h1>
-
-</template>
