added equal to the class

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -24,7 +24,7 @@
 
     <div class="container-fluid containerplus">
       <div class="row">
-        <div class"col-md-4">
+        <div class= "col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo">
           </a></img>
         </div>
@@ -68,9 +68,23 @@
       </ul>
     </nav>
 
-    <div class="container-fluid image">
-      <img src="Home.jpg" class = "homePage"></img>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-5">
+          <h1>Our Mission</h1>
+            <img src="childrenIcon.png" height="280px">
+        </div>
+
+        <div class="col-md-3">
+          <h4>Text SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample</h4>
+        </div>
+
+
+      </div>
     </div>
+
 
   <div class="container-fluid footer">
     <div class ="row">
