--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 
     <div class="container-fluid containerplus">
       <div class="row">
-        <div class"col-md-4">
+        <div class= "col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo">
           </a>
         </div>
