about us page done

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -69,19 +69,57 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="row">
+      <div class="row" style = "margin-bottom:50px;margin-left:80px;">
         <div class="col-md-5">
-          <h1>Our Mission</h1>
-            <img src="childrenIcon.png" height="280px">
+          <img src="mission.jpg" height="350px">
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-6">
+          <h1 class = "aboutUs">Our Mission</h1>
+
           <h4>Text SampleText SampleText SampleText Sample
           Text SampleText SampleText SampleText SampleText Sample
           Text SampleText SampleText SampleText SampleText Sample</h4>
         </div>
 
+      </div>
 
+    <hr class = "line">
+      <div class="row" style = "margin-bottom:50px;margin-left:90px">
+        <div class="col-md-6">
+          <h1 class = "aboutUs">Our Vision</h1>
+
+          <h4>Text SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample</h4>
+        </div>
+
+        <div class="col-md-5">
+          <img src="vision.jpg" height="350px" style="margin-left:45px">
+        </div>
+      </div>
+
+    <hr class = "line">
+      <div class="row" style = "margin-bottom:50px;margin-left:80px;">
+        <div class="col-md-5">
+          <img src="HELPLogo.png" height="200px" style="margin-bottom:40px;">
+          <img src="AGNLogo.png" height="230px">
+        </div>
+
+        <div class="col-md-6">
+          <h1 class = "aboutUs">Our Sponsors</h1>
+
+          <h3 class = "aboutUs">HELP University</h3>
+          <h4>Text SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample</h4>
+
+          <h3 class = "aboutUs" style="margin-top:50px;">AGN</h3>
+          <h4>Text SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample
+          Text SampleText SampleText SampleText SampleText Sample</h4>
+
+        </div>
       </div>
     </div>
 
