done register page

--- a/joinUs.html
+++ b/joinUs.html
@@ -68,8 +68,22 @@
       </ul>
     </nav>
 
-    <div class="container-fluid image">
-      <img src="Home.jpg" class = "homePage"></img>
+    <div class="container-fluid">
+      <div class = "row">
+        <div class="col-md-5 col-md-offset-3 register">
+          <h1 class = "loginText">JOIN US</h1>
+          <input type="text" name="username" class="form form-control input-lg"
+          placeholder="USERNAME" style = "margin-top:60px;">
+          <input type="text" name="name" class="form form-control input-lg"
+          placeholder="NAME">
+          <input type="email" name="email" class="form form-control input-lg"
+          placeholder="EMAIL">
+          <input type="password" name="password" class="form form-control input-lg"
+          placeholder="PASSWORD">
+
+          <button type="submit" class="loginBtn">REGISTER</button>
+        </div>
+      </div>
     </div>
 
   <div class="container-fluid footer">
