finish the home page

--- a/home.html
+++ b/home.html
@@ -69,8 +69,59 @@
     </nav>
 
     <div class="container-fluid">
-      <img src="Home.jpg" class = "homePage"></img>
+      <div class ="row">
+        <div class = "col-md-12">
+          <h3 class = "title">Making a Better Future For The Children</h3>
+        </div>
+      </div>
     </div>
+
+    <div class="container-fluid">
+      <div class ="row">
+        <div class = "col-md-6 col-md-offset-3">
+          <img src="home.jpg" class ="homePic">
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid homeBar">
+      <div class ="row">
+        <div class = "col-md-4 col-md-offset-1">
+          <h3 class = "homeBarfont">A LITTLE HELP CAN MAKE A HUGE DIFFERENCES<h3>
+          <h3 class = "homeBarfont">CHARITY BEGINS AT HOME BUT SHOULD NOT END THERE<h3>
+        </div>
+
+        <div class = "col-md-3 col-md-offset-1">
+          <a href = "JoinUs.html"><button class="homeBarBtn">VOLUNTEER</button></a>
+        </div>
+
+        <div class = "col-md-3">
+          <a href = "donate.html"><button class="homeBarBtn">DONATE</button></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid homeBar2">
+      <div class ="row">
+        <div class = "col-md-5 col-md-offset-1">
+          <h3 class="aboutJinjangTitle">The Children in Jinjang</h3>
+          <h5 class = "aboutJinjang">The children in Jinjang Utara have been
+            growing up in a poverty stricken environment. Some were abandoned by
+            their parents or are neglected in an environment of abject poverty.
+            Violence is rampant in this place. Teenagers are at risk of being
+            recruited by gangs. With their home so broken and crowded,
+            the teenagers have no place to turn to. The gangs offered financial
+            and communal support/relief, including a sense of belonging.<h5>
+
+          <a href="jinjangStory.html"><button class ="readMoreBtn">Read More</button>
+        </div>
+
+        <div class = "col-md-5 col-md-offset-1">
+          <img src="event.jpg" height="400px;">
+        </div>
+
+    </div>
+  </div>
 
   <div class="container-fluid footer">
     <div class ="row">
@@ -129,11 +180,6 @@
         <img src = "AGNLogo.png" class = "AGNLogo"></img>
       </div>
     </div>
-
-    </div>
-
-  </div>
-
   </div>
 
   </body>
