--- a/donate.html
+++ b/donate.html
@@ -68,8 +68,22 @@
       </ul>
     </nav>
 
-    <div class="container-fluid image">
-      <img src="Home.jpg" class = "homePage"></img>
+    <div class="container-fluid">
+      <div class = "row">
+        <div class="col-md-5 col-md-offset-3 register">
+          <h1 class = "loginText">DONATE</h1>
+          <input type="text" name="name" class="form form-control input-lg"
+          placeholder="NAME" style = "margin-top:60px;">
+          <input type="number" name="amount" class="form form-control input-lg"
+          placeholder="AMOUNT">
+          <input type="email" name="email" class="form form-control input-lg"
+          placeholder="EMAIL">
+          <input type="phone" name="contact" class="form form-control input-lg"
+          placeholder="CONTACT">
+
+          <button type="submit" class="loginBtn">DONATE</button>
+        </div>
+      </div>
     </div>
 
   <div class="container-fluid footer">
