--- a/jinjangStory.html
+++ b/jinjangStory.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div class= "col-md-4">
           <a href="home.html"><img src="Logo.png" class="logo">
-          </a></img>
+          </a>
         </div>
 
         <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"style="margin-top:33px;">
@@ -59,9 +59,9 @@
 
     <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
       <ul class ="nav navbar-nav">
-        <li><a href="home.html">HOME</a></li>
+        <li class = "active"><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
-        <li class = "active"><a href="events.html">EVENTS</a></li>
+        <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATE</a></li>
         <li><a href="joinUs.html">JOIN US</a></li>
         <li><a href="login.html">LOGIN</a></li>
@@ -69,61 +69,80 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="row" style = "margin-bottom:50px;margin-left:80px;">
-        <div class="col-md-5">
-          <img src="mission.jpg" height="350px">
-        </div>
-
-        <div class="col-md-6">
-          <h1 class = "aboutUs">Event 1</h1>
-
-          <h4>Date: 14/3/2018<br><br>
-              Time: 8am - 12pm<br><br>
-              Text SampleText SampleText SampleText Sample
-              Text SampleText SampleText SampleText SampleText Sample
-              Text SampleText SampleText SampleText SampleText Sample
-          </h4>
-        </div>
-
-      </div>
-
-    <hr class = "line">
-      <div class="row" style = "margin-bottom:50px;margin-left:90px">
-        <div class="col-md-6">
-          <h1 class = "aboutUs">Event 2</h1>
-
-          <h4>Date: 14/3/2018<br><br>
-              Time: 8am - 12pm<br><br>
-              Text SampleText SampleText SampleText Sample
-              Text SampleText SampleText SampleText SampleText Sample
-              Text SampleText SampleText SampleText SampleText Sample
-          </h4>
-        </div>
-
-        <div class="col-md-5">
-          <img src="vision.jpg" height="350px" style="margin-left:45px">
-        </div>
-      </div>
-
-    <hr class = "line">
-      <div class="row" style = "margin-bottom:50px;margin-left:80px;">
-        <div class="col-md-5">
-          <img src="event.jpg" height="350px" style="margin-bottom:40px;">
-        </div>
-
-        <div class="col-md-6">
-          <h1 class = "aboutUs">Event 3</h1>
-
-          <h4>Date: 14/3/2018<br><br>
-              Time: 8am - 12pm<br><br>
-              Text SampleText SampleText SampleText Sample
-              Text SampleText SampleText SampleText SampleText Sample
-              Text SampleText SampleText SampleText SampleText Sample
-          </h4>
-
+      <div class ="row">
+        <div class = "col-md-6 col-md-offset-3">
+          <img src="event.jpg" height="500px">  
         </div>
       </div>
     </div>
+
+    <div class="container-fluid">
+      <div class ="row">
+        <div class = "col-md-8 col-md-offset-2">
+          <h3 class = "storyTitle">The Story Behind Jinjang</h3>
+          <h3 class = "story">The entire housing was built on the city’s
+            landfilled rubbish dump. It is currently notorious for the high
+            crime rate, drug abuse, gang fights and conflicts. A harbor for
+            drug addicts, alcoholics, gangsters, prostitutes and petty criminals.
+            Jinjang Utara is littered with dilapidated rumah transit (supposed
+            to be temporary housing). Currently, housing more than 2000 people.
+            These are forgotten people who became disillusioned and embittered.
+            The inhabitants waited for 40 years to date, to be relocated to
+            their new residence under Projek Perumahan (PPR) which has yet to
+            happen. This is 38 years later than the promised duration by the
+            government. Even if they are offered low cost housing tomorrow,
+            they will not be able to afford it as they can hardly afford
+            the RM40 per month rent even now. The average combined income
+            per month for each family is less than RM1000.<br><br>
+
+            The integrity of the rumah transit is questionable because they
+            were not built to last. This poses a health and safety hazard for
+            the family staying under the roof of each unit. The occupants have
+            grown over the years to include three generations with an average
+            of ten people in each unit. Each unit is cramped in a
+            480-square-feet space for the entire family of over 10 pax each.<br>
+
+            <br>The children in Jinjang Utara have been growing up in a poverty
+            stricken environment. Some were abandoned by their parents or are
+            neglected in an environment of abject poverty. Violence is rampant
+            in this place. Teenagers are at risk of being recruited by gangs.
+            With their home so broken and crowded, the teenagers have no place
+            to turn to. The gangs offered financial and communal support/relief,
+            including a sense of belonging.<br><br>
+
+            Jonathan Ambalagan and Mary Ramamoothy started the community work
+            and have been reaching out to the children of Jinjang Utara for the
+            past 17 years. It is their life mission to see the community
+            transformed and changed through helping the children - one child
+            at a time. The chief focus is on education and social concern
+            activities. They conduct weekly outdoor activities to instill
+            moral values in children. Over 100 children attend their session
+            every week. Over the years, many of these children have progressed
+            to complete their secondary education. Few are even completing
+            their college education through the sponsorship of kind benefactors
+            like HELP Education Group.<br><br>
+
+            Jonathan and Mary make home visits weekly to know each family’s
+            respective needs. In the process, they are supporting some of
+            the families’ need such as education (school bus), groceries,
+            school supplies, etc. Because of the financial burden, many of
+            these children are undernourished and some are even deprived of
+            food for many days. They then have to survive on occasional
+            leftovers offered by kind neighbors.<br><br>
+
+            The children are constantly subjected to danger of bad influence,
+            perversion and exploitation daily under such conditions.
+            Occasionally, Jonathan and Mary will be called for counselling,
+            as the men are thrown in jail, taken into drug rehab, youths
+            arrested for fights or drug possession, etc. The work is immense
+            with never ending challenges.
+<h3>
+        </div>
+
+
+      </div>
+    </div>
+
 
   <div class="container-fluid footer">
     <div class ="row">
@@ -182,11 +201,6 @@
         <img src = "AGNLogo.png" class = "AGNLogo"></img>
       </div>
     </div>
-
-    </div>
-
-  </div>
-
   </div>
 
   </body>
