edited the home page

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
     <div class="container-fluid">
       <div class ="row">
         <div class = "col-md-12">
-          <h3 class = "title">Making a Better Future For The Children</h3>
+          <h3 class = "title">Impact a Life, Transform a Community</h3>
         </div>
       </div>
     </div>
