--- a/joinUs.html
+++ b/joinUs.html
@@ -81,7 +81,7 @@
           <input type="password" name="password" class="form form-control input-lg"
           placeholder="PASSWORD">
 
-          <button type="submit" class="loginBtn">REGISTER</button>
+          <a href = "login.html"><button type="submit" class="loginBtn">REGISTER</button></a>
         </div>
       </div>
     </div>
