--- a/memberLogin.html
+++ b/memberLogin.html
@@ -61,23 +61,69 @@
       <ul class ="nav navbar-nav">
         <li><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
-        <li><a href="events.html">EVENTS</a></li>
+        <li class = "active"><a href="#.html">EVENTS</a></li>
         <li><a href="donate.html">DONATE</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
-        <li class = "active"><a href="login.html">LOGIN</a></li>
+        <li><a href="setting.html">SETTING</a></li>
+        <li class = "logOut"><a href="home.html">LOG OUT</a></li>
       </ul>
     </nav>
 
     <div class="container-fluid">
-      <div class = "row">
-        <div class="col-md-5 col-md-offset-3 login">
-          <h1 class = "loginText">LOGIN</h1>
-          <input type="text" name="username" class="form form-control input-lg"
-          placeholder="USERNAME" style = "margin-top:60px;">
-          <input type="password" name="password" class="form form-control input-lg"
-          placeholder="PASSWORD">
+      <div class="row" style = "margin-bottom:50px;margin-left:80px;">
+        <div class="col-md-5">
+          <img src="mission.jpg" height="350px">
+        </div>
 
-          <a href="memberLogin.html"><button type="submit" class="loginBtn">LOGIN</button></a>
+        <div class="col-md-6">
+          <h1 class = "aboutUs">Event 1</h1>
+
+          <h4>Date: 14/3/2018<br><br>
+              Time: 8am - 12pm<br><br>
+              Text SampleText SampleText SampleText Sample
+              Text SampleText SampleText SampleText SampleText Sample
+              Text SampleText SampleText SampleText SampleText Sample
+          </h4><br>
+          <button class="loginBtn">Join Event</button>
+        </div>
+
+      </div>
+
+    <hr class = "line">
+      <div class="row" style = "margin-bottom:50px;margin-left:90px">
+        <div class="col-md-6">
+          <h1 class = "aboutUs">Event 2</h1>
+
+          <h4>Date: 14/3/2018<br><br>
+              Time: 8am - 12pm<br><br>
+              Text SampleText SampleText SampleText Sample
+              Text SampleText SampleText SampleText SampleText Sample
+              Text SampleText SampleText SampleText SampleText Sample
+          </h4>
+          <button class="loginBtn">Join Event</button>
+        </div>
+
+        <div class="col-md-5">
+          <img src="vision.jpg" height="350px" style="margin-left:45px">
+        </div>
+      </div>
+
+    <hr class = "line">
+      <div class="row" style = "margin-bottom:50px;margin-left:80px;">
+        <div class="col-md-5">
+          <img src="event.jpg" height="350px" style="margin-bottom:40px;">
+        </div>
+
+        <div class="col-md-6">
+          <h1 class = "aboutUs">Event 3</h1>
+
+          <h4>Date: 14/3/2018<br><br>
+              Time: 8am - 12pm<br><br>
+              Text SampleText SampleText SampleText Sample
+              Text SampleText SampleText SampleText SampleText Sample
+              Text SampleText SampleText SampleText SampleText Sample
+          </h4>
+          <button class="loginBtn">Join Event</button>
+
         </div>
       </div>
     </div>
