--- a/setting.html
+++ b/setting.html
@@ -63,21 +63,25 @@
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
         <li><a href="donate.html">DONATE</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
-        <li class = "active"><a href="login.html">LOGIN</a></li>
+        <li class = "active"><a href="setting.html">SETTING</a></li>
+        <li class = "logOut"><a href="home.html">LOG OUT</a></li>
       </ul>
     </nav>
 
     <div class="container-fluid">
       <div class = "row">
-        <div class="col-md-5 col-md-offset-3 login">
-          <h1 class = "loginText">LOGIN</h1>
+        <div class="col-md-5 col-md-offset-3 register">
+          <h1 class = "loginText">SETTING</h1>
           <input type="text" name="username" class="form form-control input-lg"
           placeholder="USERNAME" style = "margin-top:60px;">
+          <input type="text" name="name" class="form form-control input-lg"
+          placeholder="NAME">
+          <input type="email" name="email" class="form form-control input-lg"
+          placeholder="EMAIL">
           <input type="password" name="password" class="form form-control input-lg"
           placeholder="PASSWORD">
 
-          <a href="memberLogin.html"><button type="submit" class="loginBtn">LOGIN</button></a>
+          <a href = "event.html"><button type="submit" class="loginBtn">UPDATE</button></a>
         </div>
       </div>
     </div>
