--- a/donate.html
+++ b/donate.html
@@ -70,7 +70,7 @@
 
     <div class="container-fluid">
       <div class = "row">
-        <div class="col-md-5 col-md-offset-3 register">
+        <div class="col-xs-12 col-md-5 col-md-offset-3 register">
           <h1 class = "loginText">DONATE</h1>
           <input type="text" name="name" class="form form-control input-lg"
           placeholder="NAME" style = "margin-top:60px;">
