--- a/home.html
+++ b/home.html
@@ -24,49 +24,56 @@
 
     <div class="container-fluid containerplus">
       <div class="row">
-        <div class= "col-md-4">
-          <a href="home.html"><img src="Logo.png" class="logo">
-          </a>
+        <div class= "col-xs-12 col-md-4">
+          <a href="home.html"><img src="Logo.png" class="logo"></a>
         </div>
 
-        <div class="col-xs-1 col-md-1 col-xs-offset-10 topIcon"style="margin-top:33px;">
-          <div><a href=https://www.facebook.com/>
-          <img src = "facebook.png" height="40px" width="40px"></a></div>
-        </div>
+        <div class="col-xs-12 col-md-2 col-md-offset-6">
+          <div class="col-xs-3 col-md-1 topIcon" style="margin-top:35px">
+            <div><a href=https://www.facebook.com/>
+            <img src = "facebook.png" height="40px" width="40px"></a></div>
+          </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
           <div><a href=https://www.twitter.com/>
           <img src = "twitter.png" height="35px" width="35px"></a></div>
         </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
           <div><a href=https://www.google.com/>
           <img src = "google.png" height="35px" width="35px"></a></div>
         </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:33px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:33px">
           <div><a href=https://www.instagram.com/>
           <img src = "instagram.png" height="39px" width="39px"></a></div>
         </div>
 
-        <div class="col-xs-1 col-md-1 topIcon" style="margin-top:35px">
+        <div class="col-xs-2 col-md-1 topIcon" style="margin-top:35px">
           <div><a href=https://www.youtube.com/>
           <img src = "youtube.png" height="35px" width="35px"></a></div>
         </div>
+      </div>
 
       </div>
     </div>
 
-    <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
-      <ul class ="nav navbar-nav">
-        <li class = "active"><a href="home.html">HOME</a></li>
-        <li><a href="aboutUs.html">ABOUT US</a></li>
-        <li><a href="events.html">EVENTS</a></li>
-        <li><a href="donate.html">DONATE</a></li>
-        <li><a href="joinUs.html">JOIN US</a></li>
-        <li><a href="login.html">LOGIN</a></li>
-      </ul>
-    </nav>
+    <div class="container-fluid">
+      <div class ="row">
+        <div class = "col-xs-12 col-md-12">
+          <nav class="navbar navbar-custom" data-spy="affix" data-offset-top="350">
+            <ul class ="nav navbar-nav">
+              <li class = "active"><a href="home.html">HOME</a></li>
+              <li><a href="aboutUs.html">ABOUT US</a></li>
+              <li><a href="events.html">EVENTS</a></li>
+              <li><a href="donate.html">DONATE</a></li>
+              <li><a href="joinUs.html">JOIN US</a></li>
+              <li><a href="login.html">LOGIN</a></li>
+            </ul>
+          </nav>
+      </div>
+    </div>
+  </div>
 
     <div class="container-fluid">
       <div class ="row">
@@ -113,7 +120,7 @@
             the teenagers have no place to turn to. The gangs offered financial
             and communal support/relief, including a sense of belonging.<h5>
 
-          <a href="jinjangStory.html"><button class ="readMoreBtn">Read More</button>
+          <a href="jinjangStory.html"><button class ="readMoreBtn">Read More</button></a>
         </div>
 
         <div class = "col-md-5 col-md-offset-1">
@@ -179,6 +186,8 @@
       <div class ="col-md-3">
         <img src = "AGNLogo.png" class = "AGNLogo"></img>
       </div>
+
+
     </div>
   </div>
 
