--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
 
     <div class="container-fluid">
       <div class = "row">
-        <div class="col-md-5 col-md-offset-3 login">
+        <div class="col-xs-12 col-md-5 col-md-offset-3 login">
           <h1 class = "loginText">LOGIN</h1>
           <input type="text" name="username" class="form form-control input-lg"
           placeholder="USERNAME" style = "margin-top:60px;">
