edited the changes dicussed after the interim presentation

--- a/memberLogin.html
+++ b/memberLogin.html
@@ -63,7 +63,7 @@
         <li><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li class = "active"><a href="#.html">EVENTS</a></li>
-        <li><a href="donate.html">DONATE</a></li>
+        <li><a href="donate.html">DONATION</a></li>
         <li><a href="setting.html">SETTINGS</a></li>
         <li class = "logOut"><a href="home.html">LOG OUT</a></li>
       </ul>
