--- a/donate.html
+++ b/donate.html
@@ -63,7 +63,7 @@
         <li><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
-        <li class = "active"><a href="donate.html">DONATE</a></li>
+        <li class = "active"><a href="donate.html">DONATION</a></li>
         <li><a href="joinUs.html">JOIN US</a></li>
         <li><a href="login.html">LOGIN</a></li>
       </ul>
@@ -72,7 +72,7 @@
     <div class="container-fluid">
       <div class = "row">
         <div class="col-xs-12 col-md-5 col-md-offset-3 register">
-          <h1 class = "loginText">DONATE</h1>
+          <h1 class = "loginText">DONATION</h1>
           <input type="text" name="name" class="form form-control input-lg"
           placeholder="NAME" style = "margin-top:60px;">
           <input type="number" name="amount" class="form form-control input-lg"
@@ -82,7 +82,7 @@
           <input type="phone" name="contact" class="form form-control input-lg"
           placeholder="CONTACT">
 
-          <button type="submit" class="loginBtn">DONATE</button>
+          <button type="submit" class="loginBtn">DONATION</button>
         </div>
       </div>
     </div>
