--- a/events.html
+++ b/events.html
@@ -63,7 +63,7 @@
         <li><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li class = "active"><a href="events.html">EVENTS</a></li>
-        <li><a href="donate.html">DONATE</a></li>
+        <li><a href="donate.html">DONATION</a></li>
         <li><a href="joinUs.html">JOIN US</a></li>
         <li><a href="login.html">LOGIN</a></li>
       </ul>
