--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
         <li class = "active"><a href="home.html">HOME</a></li>
         <li><a href="aboutUs.html">ABOUT US</a></li>
         <li><a href="events.html">EVENTS</a></li>
-        <li><a href="donate.html">DONATE</a></li>
+        <li><a href="donate.html">DONATION</a></li>
         <li><a href="joinUs.html">JOIN US</a></li>
         <li><a href="login.html">LOGIN</a></li>
       </ul>
@@ -98,7 +98,7 @@
         </div>
 
         <div class = "col-md-3">
-          <a href = "donate.html"><button class="homeBarBtn">DONATE</button></a>
+          <a href = "donate.html"><button class="homeBarBtn">DONATION</button></a>
         </div>
       </div>
     </div>
