adjusted the image to be responsive

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -71,11 +71,11 @@
 
     <div class="container-fluid">
       <div class="row" style = "margin-bottom:50px;margin-left:80px;">
-        <div class="col-md-5">
-          <img src="mission.jpg" height="350px">
+        <div class="col-xs-8 col-md-5">
+          <img src="mission.jpg" class="img-fluid" alt="Responsive image" height="350px" width="100%">
         </div>
 
-        <div class="col-md-6">
+        <div class="col-xs-12 col-md-6">
           <h1 class = "aboutUs">Our Mission</h1>
 
           <h4>Text SampleText SampleText SampleText Sample
@@ -86,28 +86,30 @@
       </div>
 
     <hr class = "line">
-      <div class="row" style = "margin-bottom:50px;margin-left:90px">
-        <div class="col-md-6">
+      <div class="row" style = "margin-bottom:50px;margin-left:80px">
+        <div class="col-xs-12 col-md-5">
           <h1 class = "aboutUs">Our Vision</h1>
 
-          <h4>Text SampleText SampleText SampleText Sample
-          Text SampleText SampleText SampleText SampleText Sample
-          Text SampleText SampleText SampleText SampleText Sample</h4>
+          <h4>To help the underprivileged children of Jinjang community
+             break the cycle of poverty through education</h4>
         </div>
 
-        <div class="col-md-5">
-          <img src="vision.jpg" height="350px" style="margin-left:45px">
+        <div class="col-xs-8 col-md-5">
+          <img src="vision.jpg" class="img-fluid" alt="Responsive image"
+          height="350px" width="100%" style="margin-left:45px">
         </div>
       </div>
 
     <hr class = "line">
       <div class="row" style = "margin-bottom:50px;margin-left:80px;">
-        <div class="col-md-5">
-          <img src="HELPLogo.png" height="200px" style="margin-bottom:40px;">
-          <img src="AGNLogo.png" height="230px">
+        <div class="col-xs-7 col-md-5">
+          <img src="HELPLogo.png" class="img-fluid" alt="Responsive image"
+           height="200px" width="100%" style="margin-bottom:40px;">
+          <img src="AGNLogo.png" class="img-fluid" alt="Responsive image"
+          height="230px" width="100%">
         </div>
 
-        <div class="col-md-6">
+        <div class="col-xs-12 col-md-6">
           <h1 class = "aboutUs">Our Sponsors</h1>
 
           <h3 class = "aboutUs">HELP University</h3>
