--- a/jinjangStory.html
+++ b/jinjangStory.html
@@ -43,15 +43,16 @@
 
     <div class="container-fluid">
       <div class ="row">
-        <div class = "col-md-6 col-md-offset-3">
-          <img src="event.jpg" height="500px">
+        <div class = "col-xs-offset-3 col-xs-6 col-md-6 col-md-offset-3">
+          <img src="event.jpg" class="img-fluid" alt="Responsive image"
+          height="500px" width="100%">
         </div>
       </div>
     </div>
 
     <div class="container-fluid">
       <div class ="row">
-        <div class = "col-md-8 col-md-offset-2">
+        <div class = "col-xs-offset-1 col-xs-10 col-md-8 col-md-offset-2">
           <h3 class = "storyTitle">The Story Behind Jinjang</h3>
           <h3 class = "story">The entire housing was built on the city’s
             landfilled rubbish dump. It is currently notorious for the high
